Comments chapter 1,2 and 5,6,7.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -48,7 +48,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.63\xspace}
+\newcommand{\myVersion}{Version 0.64\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -99,7 +99,7 @@
 \newcommand*{\ptcone}{\ensuremath{p_T^\mathrm{Cone}}\xspace}
 \newcommand*{\emfrac}{\ensuremath{f_\mathrm{EM}}\xspace}
 \newcommand*{\lumi}{3.2}
-\newcommand*{\signoise}{\ensuremath{\sigma_{\mathrm{noise}}}}
+\newcommand*{\signoise}{\ensuremath{\sigma_{\mathrm{noise}}}\xspace}
 
 \newcommand*{\fullfig}{0.85\textwidth}
 \newcommand*{\halffig}{0.49\textwidth}
