--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -51,15 +51,15 @@
 %----------------------------------------------------------------------------------------
 %	List of Listings
 %---------------------------------------------------------------------------------------- 
-
-\refstepcounter{dummy}
-%\addcontentsline{toc}{chapter}{\lstlistlistingname} % Uncomment if you would like the list of listings to appear in the table of contents
-\pdfbookmark[1]{\lstlistlistingname}{lol} % Bookmark name visible in a PDF viewer
-
-\lstlistoflistings 
-
-\vspace{8ex}
-\newpage
+%
+%\refstepcounter{dummy}
+%%\addcontentsline{toc}{chapter}{\lstlistlistingname} % Uncomment if you would like the list of listings to appear in the table of contents
+%\pdfbookmark[1]{\lstlistlistingname}{lol} % Bookmark name visible in a PDF viewer
+%
+%\lstlistoflistings 
+%
+%\vspace{8ex}
+%\newpage
        
 %----------------------------------------------------------------------------------------
 %	Acronyms
@@ -118,6 +118,7 @@
 \acro{CP}{Combined Performance}
 \acro{MDT}{Monitored Drift Tube}
 \acro{RF}{radiofrequency}
+\acro{L1}{Level 1}
 \acro{HLT}{high level trigger}
 \acro{QCD}{quantum chromodynamics}
 \acro{BSM}{beyond the Standard Model}
