Added missing content to chapter 2

--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -97,7 +97,7 @@
 
 %------------------------------------------------
 
-\ctparttext{You can put some informational part preamble text here.}
+%\ctparttext{You can put some informational part preamble text here.}
 \part{Theoretical Context}
 \label{part:theory}
 
@@ -105,20 +105,20 @@
 \include{chapters/ch03_supersymmetry}
 %\include{chapters/ch04_longlived}
 
-\ctparttext{You can put some informational part preamble text here.}
+%\ctparttext{You can put some informational part preamble text here.}
 \part{Experimental Structure and Reconstruction}
 \label{part:experiment}
 \include{chapters/ch05_lhc}
 \include{chapters/ch06_atlas}
 \include{chapters/ch07_reconstruction}
 
-\ctparttext{You can put some informational part preamble text here.}
+%\ctparttext{You can put some informational part preamble text here.}
 \part{Calorimeter Response}
 \label{part:calorimeter}
 \include{chapters/ch08_singlehadrons}
 \include{chapters/ch09_jes}
 
-\ctparttext{You can put some informational part preamble text here.}
+%\ctparttext{You can put some informational part preamble text here.}
 \part{Search for Long-Lived Particles}
 \label{part:llp}
 \include{chapters/ch10_simulation}
