--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -121,7 +121,7 @@
 \acro{L1}{Level 1}
 \acro{HLT}{high level trigger}
 \acro{QCD}{quantum chromodynamics}
-\acro{BSM}{beyond the Standard Model}
+\acro{BSM}{Beyond the Standard Model}
 \end{acronym}
                    
 \endgroup
