--- a/frontback/Acknowledgments.tex
+++ b/frontback/Acknowledgments.tex
@@ -2,11 +2,6 @@
 
 \pdfbookmark[1]{Acknowledgements}{Acknowledgements} % Bookmark name visible in a PDF viewer
 
-\begin{flushright}{\slshape    
-optional quotation
-}
-\end{flushright}
-
 \bigskip
 
 %----------------------------------------------------------------------------------------
@@ -19,10 +14,6 @@ optional quotation
 
 \chapter*{Acknowledgements}
 
-\noindent Put your acknowledgements here.\\
-
-\bigskip
-
-\noindent And potentially a second round.\\
+\noindent To be filled.\\
 
 \endgroup
