--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -109,6 +109,7 @@
 \acro{LL}{long-lived}
 \acro{VLL}{very long-lived}
 \acro{CR}{Control Region}
+\acro{LO}{leading order}
 \acro{NLO}{next-to-leading order}
 \acro{NLL}{next-to-leading logarithmic}
 \acro{PDF}{parton distribution function}
