--- a/frontback/Dedication.tex
+++ b/frontback/Dedication.tex
@@ -1,18 +1,13 @@
 % Dedication
 
-\thispagestyle{empty}
 \refstepcounter{dummy}
 
 \pdfbookmark[1]{Dedication}{Dedication} % Bookmark name visible in a PDF viewer
 
 \vspace*{3cm}
 
-\begin{center}
-Usually a quotation. \\
-\end{center}
-
 \medskip
 
 \begin{center}
-Dedicated to. \\ \smallskip
+To be filled. \\ \smallskip
 \end{center}
