--- a/thesis.bib
+++ b/thesis.bib
@@ -61,7 +61,6 @@
 @unpublished{lhc_guide,
       author        = "Lefevre, C",
       title         = "{LHC: the guide (English version). Guide du LHC (version anglaise)}",
-      month         = "Feb",
       year          = "2009",
       reportNumber  = "CERN-Brochure-2009-003-Eng",
       url           = "https://cds.cern.ch/record/1165534",
@@ -706,4 +705,43 @@
       title         = "{The 2004 Nobel Prize in Physics - Popular Information}",
       year          = "2014",
       url           = "https://cds.cern.ch/record/1165534",
+}
+
+
+@unpublished{lhcb_image,
+      author        = "LHCb, Collaboration",
+      title         = "{For LHCb Talks}",
+      year          = "2012",
+      reportNumber  = "LHCb-PHO-GEN-2012-001",
+      url           = "http://cds.cern.ch/record/1463546",
+}
+
+@unpublished{online_lumi,
+      author        = "ATLAS Collaboration",
+      title         = "{Luminosity Public Results}",
+      year          = "2016",
+      url           = "https://twiki.cern.ch/twiki/bin/view/AtlasPublic/LuminosityPublicResultsRun2",
+}
+
+@unpublished{complex_graphic,
+      author        = "Ars Technica",
+      title         = "{Following protons on a trip to (and through) the LHC}",
+      year          = "2010",
+      url           = "http://arstechnica.com/science/2010/08/following-protons-on-a-trip-to-and-through-the-lhc/",
+}
+
+@unpublished{ibl_insert,
+      author        = "ATLAS Collaboration",
+      title         = "{A New Sub Detector for ATLAS}",
+      year          = "2014",
+      url           = "http://atlasexperiment.org/news/2014/a-new-sub-detector-for-ATLAS.html",
+}
+
+@book{peskin,
+      author        = "Peskin, Michael E and Schroeder, Daniel V",
+      title         = "{An Introduction to Quantum Field Theory; 1995 ed.}",
+      publisher     = "Westview",
+      address       = "Boulder, CO",
+      year          = "1995",
+      url           = "https://cds.cern.ch/record/257493",
 }
