Reverted to alternating page margins

--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -28,7 +28,7 @@
 %----------------------------------------------------------------------------------------
 
 \documentclass[
-                %twoside,openright, BCOR=5mm,
+                twoside,openright, BCOR=5mm,
                 titlepage,numbers=noenddot,headinclude,%1headlines,
 	 	footinclude=true,cleardoublepage=empty,
 		dottedtoc, % Make page numbers in the table of contents flushed right with dots leading to them
