--- a/frontback/Abstract.tex
+++ b/frontback/Abstract.tex
@@ -10,7 +10,19 @@
 \let\cleardoublepage\relax
 
 \chapter*{Abstract}
-Several extensions of the Standard Model predict the existence of charged, very massive, and long-lived particles. Because of their high masses these particles would propagate non-relativistically through the ATLAS pixel detector and would therefore be identifiable through a measurement of large specific energy loss. Measuring heavy, long-lived particles through their track parameters in the pixel detector allows sensitivity to particles with lifetimes in the nanosecond range and above. This dissertation presents an inner detector driven method for identifying such particles in proton-proton collisions at 13 TeV with the 2015 \acs*{LHC} dataset corresponding to an integrated luminosity of 3.5 pb$^{-1}$.
+
+\begin{center}
+\myTitle \\ \bigskip
+by \\ \bigskip
+\myName \\ \bigskip
+Doctor of Philosophy \\ \smallskip
+University of California, Berkeley \\ \smallskip
+Professor Beate Heinemann, Chair \\
+\end{center}
+
+\vspace{2cm}
+
+\noindent Several extensions of the Standard Model predict the existence of charged, very massive, and long-lived particles. Because of their high masses these particles would propagate non-relativistically through the ATLAS pixel detector and would therefore be identifiable through a measurement of large specific energy loss. Measuring heavy, long-lived particles through their track parameters in the pixel detector allows sensitivity to particles with lifetimes in the nanosecond range and above. This dissertation presents an inner detector driven method for identifying such particles in proton-proton collisions at 13 TeV with the 2015 \acs*{LHC} dataset corresponding to an integrated luminosity of 3.5 pb$^{-1}$.
 \endgroup			
 
 \vfill
