--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -75,14 +75,22 @@
 
 \begin{acronym}[UML]
 \acro{SM}{Standard Model}
-\acro{CERN}{European Organization for Nuclear Research}
+\acro{QCD}{quantum chromodynamics}
+\acro{PDF}{parton distribution function}
+\acro{NLO}{next-to-leading order}
+\acro{NLL}{next-to-leading logarithmic}
+
+\acro{BSM}{Beyond the Standard Model}
 \acro{SUSY}{Supersymmetry}
 \acro{MSSM}{Minimal Supersymmetric Model}
 \acro{cMSSM}{Constrained MSSM}
 \acro{pMSSM}{Phenomenological MSSM}
 \acro{LSP}{Lightest Supersymmetric Particle}
+\acro{WIMP}{Weakly Interacting Massive Particle}
+\acro{LLP}{Long-Lived Particle}
+
+\acro{CERN}{European Organization for Nuclear Research}
 \acro{LHC}{Large Hadron Collider}
-\acro{ATLAS}{A Toroidal LHC ApparatuS}
 \acro{CMS}{Compact Muon Solenoid}
 \acro{ALICE}{A Large Ion Collider Experiment}
 \acro{LHCb}{Large Hadron Collider beauty experiment}
@@ -90,6 +98,9 @@
 \acro{PS}{Proton Synchrotron}
 \acro{PSB}{Proton Synchrotron Booster}
 \acro{SPS}{Super Proton Synchrotron}
+\acro{EPJC}{European Physical Journal C}
+
+\acro{IBL}{Insertible B-Layer}
 \acro{SCT}{silicon microstrip}
 \acro{TRT}{Transition Radiation Tracker}
 \acro{LAr}{liquid argon}
@@ -103,26 +114,18 @@
 \acro{LCW}{local cluster weighted}
 \acro{MIP}{minimally ionizing particle}
 \acro{IP}{impact parameter}
-\acro{EPJC}{European Physical Journal C}
 \acro{JES}{jet energy scale}
-\acro{LLP}{Long-Lived Particle}
-\acro{LL}{long-lived}
-\acro{VLL}{very long-lived}
-\acro{CR}{Control Region}
-\acro{LO}{leading order}
-\acro{NLO}{next-to-leading order}
-\acro{NLL}{next-to-leading logarithmic}
-\acro{PDF}{parton distribution function}
-\acro{ISR}{initial state radiation}
-\acro{RMS}{root mean square}
-\acro{IBL}{Insertible B-Layer}
-\acro{CP}{Combined Performance}
 \acro{MDT}{Monitored Drift Tube}
 \acro{RF}{radiofrequency}
 \acro{L1}{Level 1}
 \acro{HLT}{high level trigger}
-\acro{QCD}{quantum chromodynamics}
-\acro{BSM}{Beyond the Standard Model}
+
+\acro{LL}{long-lived}
+\acro{VLL}{very long-lived}
+\acro{CR}{Control Region}
+\acro{LO}{leading order}
+\acro{ISR}{initial state radiation}
+\acro{RMS}{root mean square}
 \end{acronym}
                    
 \endgroup
