--- a/frontback/Titleback.tex
+++ b/frontback/Titleback.tex
@@ -1,16 +1,9 @@
 % Back of the title page
 
 \thispagestyle{empty}
-
-\hfill
-
-\vfill
-
-\noindent\myName: \textit{\myTitle,} \mySubtitle, %\myDegree, 
-\textcopyright\ \myTime
-
 % You may wish to do something with the back of the title page, such as including your supervisors, location or time frame of the work. Below is an example of doing so although you may want to tweak it to your liking.
-
+\null
+\newpage
 %\bigskip
 
 %\noindent\spacedallcaps{Supervisors}: \\
