--- a/frontback/Titlepage.tex
+++ b/frontback/Titlepage.tex
@@ -2,7 +2,6 @@
 
 \begin{titlepage}
 
-\begin{addmargin}[-1cm]{-3cm}
 \begin{center}
 \large
 
@@ -13,11 +12,28 @@
 \color{title}\Large\spacedallcaps{\myTitle} \\ \bigskip % Thesis title
 \endgroup
 
+by \\ \bigskip
+
 \spacedallcaps{\myName} % Your name
 
 \vfill
 
-\includegraphics[width=5cm]{figures/ucberkeleyseal_line_540.eps} \\ \medskip % Seal
+A dissertation submitted in partial satisfaction of the \\
+requirements for the degree of \\ \bigskip
+
+Doctor of Philosophy \\ \smallskip
+
+in \\ \smallskip
+
+Physics \\ \smallskip
+
+in the \\ \smallskip
+
+Graduate Division \\ \smallskip
+
+of the \\ \smallskip
+
+University of California, Berkeley
 
 %\mySubtitle \\ \medskip % Thesis subtitle
 %\myDegree \\
@@ -25,11 +41,16 @@
 %\myFaculty \\
 %\myUni \\ \bigskip
 
-\myTime\ -- \myVersion % Time and version
-
 \vfill
 
+Committee in charge: \\ \smallskip
+
+Professor Beate Heinemann, Chair \\
+Professor Yury Kolomensky \\
+Professor Karl van Bibber \\ \bigskip\bigskip
+
+Fall 2016
+
 \end{center}
-\end{addmargin}
 
 \end{titlepage}
