--- a/thesis.bib
+++ b/thesis.bib
@@ -124,14 +124,6 @@
       SLACcitation   = "%%CITATION = HEP-EX/0511014;%%"
 }
 
-@article{dedxnote,
-      title          = "{dE/dx measurement in the ATLAS Pixel Detector and its use for particle identification}",
-      collaboration  = "ATLAS",
-      year           = "2011",
-      reportNumber   = "ATLAS-CONF-2011-016",
-      SLACcitation   = "%%CITATION = ATLAS-CONF-2011-016;%%"
-}
-
 @article{extra_dim1,
       author         = "Shah, Nausheen R. and Wagner, Carlos E. M.",
       title          = "{Gravitons and dark matter in universal extra dimensions}",
@@ -215,7 +207,7 @@
 }
 
 @article{rpv3,
-      author         = "Barbieri, R. and Berat, C. and Besancon, M. and Chemtob, M. and Deandrea, A. and others",
+      author         = "Barbieri, R. and others",
       title          = "{R-parity violating supersymmetry}",
       journal        = "Phys. Rept.",
       volume         = "420",
@@ -528,7 +520,7 @@
 }
 
 @techreport{ibl_tdr,
-      author        = "Capeans, M and Darbo, G and Einsweiller, K and Elsing, M and Flick, T and Garcia-Sciveres, M and Gemme, C and Pernegger, H and Rohne, O and Vuillermet, R",
+      author        = "Capeans, M and Darbo, G and Einsweiler, K and Elsing, M and Flick, T and Garcia-Sciveres, M and Gemme, C and Pernegger, H and Rohne, O and Vuillermet, R",
       title         = "{ATLAS Insertable B-Layer Technical Design Report}",
       number        = "CERN-LHCC-2010-013. ATLAS-TDR-19",
       month         = "Sep",
@@ -558,14 +550,6 @@
       year           = "2007",
       reportNumber   = "ATL-SOFT-PUB-2007-007, ATL-COM-SOFT-2007-002",
       SLACcitation   = "%%CITATION = ATL-SOFT-PUB-2007-007;%%"
-}
-
-@article{tracking_performance,
-      title          = "{Performance of the ATLAS Inner Detector Track and Vertex Reconstruction in the High Pile-Up LHC Environment}",
-      collaboration  = "ATLAS",
-      year           = "2012",
-      reportNumber   = "ATLAS-CONF-2012-042",
-      SLACcitation   = "%%CITATION = ATLAS-CONF-2012-042;%%"
 }
 
 @article{pixel_nn,
@@ -628,13 +612,6 @@
       SLACcitation   = "%%CITATION = ARXIV:1408.1787;%%"
 }
 
-
-@article{lep_tdr,
-      title          = "{LEP Design Report Vol.1}",
-      year           = "1983",
-      reportNumber   = "CERN-LEP-TH-83-29, CERN-PS-DL-83-31, CERN-SPS-83-26, LAL-RT-83-09",
-      SLACcitation   = "%%CITATION = CERN-LEP-TH-83-29;%%"
-}
 
 @article{atlas_extrapolation,
       author         = "Salzburger, A.",
@@ -723,6 +700,14 @@
       url           = "https://twiki.cern.ch/twiki/bin/view/AtlasPublic/LuminosityPublicResultsRun2",
 }
 
+
+@unpublished{online_susy,
+      author        = "ATLAS Collaboration",
+      title         = "{ATLAS SUSY Summary}",
+      year          = "2015",
+      url           = "https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CombinedSummaryPlots/SUSY/ATLAS_SUSY_Summary/history.html",
+}
+
 @unpublished{complex_graphic,
       author        = "Ars Technica",
       title         = "{Following protons on a trip to (and through) the LHC}",
@@ -744,4 +729,31 @@
       address       = "Boulder, CO",
       year          = "1995",
       url           = "https://cds.cern.ch/record/257493",
+}
+
+@article{susy_motivation,
+      author         = "Elor, Gilly and Hall, Lawrence J. and Pinner, David and Ruderman, Joshua T.",
+      title          = "{Yukawa Unification and the Superpartner Mass Scale}",
+      journal        = "JHEP",
+      volume         = "10",
+      year           = "2012",
+      pages          = "111",
+      doi            = "10.1007/JHEP10(2012)111",
+      eprint         = "1206.5301",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1206.5301;%%"
+}
+
+@article{susy_primer,
+      author         = "Martin, Stephen P.",
+      title          = "{A Supersymmetry primer}",
+      year           = "1997",
+      doi            = "10.1142/9789812839657_0001, 10.1142/9789814307505_0001",
+      note           = "[Adv. Ser. Direct. High Energy Phys.18,1(1998)]",
+      eprint         = "hep-ph/9709356",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-97-425-T",
+      SLACcitation   = "%%CITATION = HEP-PH/9709356;%%"
 }
