--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -62,7 +62,7 @@
 
 \include{frontback/Titleback} % Back of the title page
 
-\cleardoublepage\include{frontback/Signatures} % Signature Page
+%\cleardoublepage\include{frontback/Signatures} % Signature Page
 
 \pagenumbering{arabic}
 \setcounter{page}{1}
