--- a/eoverp.bib
+++ b/eoverp.bib
@@ -141,6 +141,7 @@ author="{CMS Collaboration}"
       SLACcitation   = "%%CITATION = ARXIV:1007.2241;%%",
       primaryClass   = "hep-ph",
 }
+
 @Booklet{AU2,
     author         = "{ATLAS Collaboration}",
     title          = "{Summary of ATLAS Pythia 8 tunes}",
@@ -278,7 +279,7 @@ author="{CMS Collaboration}"
 }
 @article{FTF24,
   author = "B. Andersson and others",
-  title = "A model for low-pT hadronic reactions with generalizations to hadron-nucleus and nucleus-nucleus collisions",
+  title = "A model for low-$p_T$ hadronic reactions with generalizations to hadron-nucleus and nucleus-nucleus collisions",
   journal = "Nucl. Phys. B",
   volume = 281,
   year = 1987,
@@ -286,7 +287,7 @@ author="{CMS Collaboration}"
   doi = "10.1016/0550-3213(87)90257-4"
 }
 @article{FTF25,
-  author = "B. Andersson and A. Tai and B.-H. Sa",
+  author = "B. Andersson and A. Tai and B. H. Sa",
   title = "Final state interactions in the (nuclear) FRITIOF string interaction scenario",
   journal = "Z. Phys. C",
   volume = 70,
