Formatting edits and small fixes

--- a/classicthesis.sty
+++ b/classicthesis.sty
@@ -393,7 +393,7 @@
         {\titlerule\vspace*{.9\baselineskip}\raggedright\Large\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]%
     }{% something like Bringhurst  
     \titleformat{\chapter}[display]%
-        {\relax}{\mbox{}\oldmarginpar{\vspace*{-3\baselineskip}\color{halfgray}\chapterNumber\thechapter}}{0pt}%
+        {\relax}{\raggedleft{\color{halfgray}\chapterNumber\thechapter}}{0pt}%\vspace*{-3\baselineskip}
         {\raggedright\Large\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]% 
     }
     % sections \FloatBarrier
