--- a/frontback/Acknowledgments.tex
+++ b/frontback/Acknowledgments.tex
@@ -1,6 +1,6 @@
 % Acknowledgements
 
-\pdfbookmark[1]{Acknowledgements}{Acknowledgements} % Bookmark name visible in a PDF viewer
+\pdfbookmark[1]{Acknowledgments}{Acknowledgments} % Bookmark name visible in a PDF viewer
 
 \bigskip
 
@@ -12,8 +12,12 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 
-\chapter*{Acknowledgements}
+\chapter*{Acknowledgments}
 
-\noindent To be filled.\\
+\noindent First thank you to Beate, my advisor, for her constant support and feedback since the moment I came to Berkeley. Thanks to Martina, Simone, Maurice, Zach, and Laura for guidance through each of my projects and consistently great advice. And the whole group at LBL, where there was someone to answer every physics question I ever had. \\ \smallskip
+
+\noindent Thanks to Sathya and David, my undergraduate advisors, for getting me started and taking such an interest in my career and success. \\ \smallskip
+
+\noindent Thanks to my friends from Santa Barbara, for being there for the worst of it and for making it so easy to talk about anything. Thanks to my friends in Geneva, for all the travel. Thanks to my friends from Berkeley, for making me a better person and grad school a better place. And thanks to Katayun for the everything.
 
 \endgroup
