--- a/frontback/Dedication.tex
+++ b/frontback/Dedication.tex
@@ -9,5 +9,6 @@
 \medskip
 
 \begin{center}
-To be filled. \\ \smallskip
+To my family, for always making me feel like I could do this.
+To my friends, for being there when I was sure I couldn't. \\ \smallskip
 \end{center}
