Added middle name according to UCB guidelines.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -39,7 +39,7 @@
 \newcommand{\myTitle}{A Search for Long-Lived, Charged, Supersymmetric Particles using Ionization with the ATLAS Detector\xspace}
 \newcommand{\mySubtitle}{Subtitle\xspace}
 \newcommand{\myDegree}{Doctor of Philosophy PhD\xspace}
-\newcommand{\myName}{Bradley Axen\xspace}
+\newcommand{\myName}{Bradley Dean Axen\xspace}
 \newcommand{\myProf}{Dr. Beate Heinemann\xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
 \newcommand{\mySupervisor}{Put name here\xspace}
@@ -48,7 +48,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.72\xspace}
+\newcommand{\myVersion}{Version 0.73\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
